[package]
name = "kernel"
version = "0.1.0"
authors = ["Levente Kurusa <levex@linux.com>"]

[profile.dev]
panic = "abort"

[dependencies]
multiboot = "0.3.0"
bitflags = "1.0.3"
rlibc = "1.0.0"
x86_64 = "0.2.7"
x86_mp = { path = "/home/lkurusa/dev/rust-x86-mp/" }

[lib]
crate-type = ["staticlib"]
path = "main.rs"

[package.metadata.bootimage]
output = "target.iso"
